- Changed: Blinds T5 till T13 new DeviceID generation, could cause new sensors
- Changed: Switch type 'Door Lock' renamed to 'Door Contact'
- Changed: Minimized On/Off/Script execution time
- Changed: Wind Direction Graph, if sensor does not supports 'Gust', the 'Speed' value is used
- Changed: Temperature Only charts will not display the Humidity axis
- Changed: Support symlinks for plugin and theme directories
- Implemented: Added a new parameter to disable the logging of event script triggers 'Script event triggered: ...'
- Implemented: AppLamp/LimitLess bridge V6.0 RGBW/RGBWW
- Implemented: Blinds T1 till T13 new supports the Stop button
- Implemented: Devices, Log icon for Blinds
- Implemented: Blockly/Lua Set SetPoint option
- Implemented: Estonian Language support (big thanks to Kuido)
- Implemented: I2C BME280 sensor (temp+hum+baro)
- Implemented: I2C for non arm systems
- Implemented: InfluxDB Data push
- Implemented: Latvian Language support (big thanks to Edgars)
- Implemented: Netatmo Home Coach support
- Implemented: Notification for Dummy Soil/Moisture sensor
- Implemented: Notification for Alert Sensor via udevice JSON call
- Implemented: Option to replace an Meter device
- Implemented: Python Plugin System
- Implemented: RFXtrx Lucci Fan implemented
- Implemented: RFXtrx RFY2 protocol implemented
- Implemented: RFXtrx Kangtai / Cotech implemented
- Implemented: Support for Ble Box hardware
- Implemented: Support for Intergas InComfort LAN2RF Gateway
- Implemented: Support for Open Weather Map
- Implemented: Support for Open Web Net
- Implemented: Support for XiaomiGateway Gateway
- Implemented: Support for YeeLight
- Implemented: Switch type 'Door Lock'
- Implemented: Timer Plan editor
- Implemented: Teleinfo : Added a switch indicating the current cost slot
- Removed: Razberry ZWave handling method. Existing users need to migrate to OpenZWave

Version 3.5878 (November 10th 2016)
- Fixes and various improvements

Version 3.5837 (October 30th 2016)