@@ -1286,14 +1286,6 @@
 			<br>
 			<table class="display" id="hardwareparamssolaredgeapi" border="0" cellpadding="0" cellspacing="20">
 				<tr>
-					<td align="right" style="width:110px"><label><span data-i18n="SiteID">SiteID</span>:</label></td>
-					<td><input type="text" id="siteid" style="width: 170px; padding: .2em;" class="text ui-widget-content ui-corner-all" /></td>
-				</tr>
-				<tr>
-					<td align="right" style="width:110px"><label><span data-i18n="Serial">Serial</span>:</label></td>
-					<td><input type="text" id="serial" style="width: 200px; padding: .2em;" class="text ui-widget-content ui-corner-all" /></td>
-				</tr>
-				<tr>
 					<td align="right" style="width:110px"><label><span data-i18n="API Key"></span>:</label></td>
 					<td><input type="text" id="apikey" style="width: 280px; padding: .2em;" class="text ui-widget-content ui-corner-all" /></td>
 				</tr>
