@@ -9,6 +9,7 @@ Version 3.xxxx (January xth 2017)
 - Changed: Minimized On/Off/Script execution time
 - Changed: Wind Direction Graph, if sensor does not supports 'Gust', the 'Speed' value is used
 - Changed: Temperature Only charts will not display the Humidity axis
+- Changed: SolarEdgeAPI, now only needs API Key
 - Changed: Support symlinks for plugin and theme directories
 - Implemented: Added a new parameter to disable the logging of event script triggers 'Script event triggered: ...'
 - Implemented: AppLamp/LimitLess bridge V6.0 RGBW/RGBWW
@@ -28,6 +29,7 @@ Version 3.xxxx (January xth 2017)
 - Implemented: RFXtrx Lucci Fan implemented
 - Implemented: RFXtrx RFY2 protocol implemented
 - Implemented: RFXtrx Kangtai / Cotech implemented
+- Implemented: SolarEdgeAPI, support for multiple inverters
 - Implemented: Support for Ble Box hardware
 - Implemented: Support for Intergas InComfort LAN2RF Gateway
 - Implemented: Support for Open Weather Map
